# IOPaint_EasySetup

./: README.md  pyproject.toml  win_start.ps1
iopaint/: api.py  cli.py  download.py
web_app/: index.html  package.json
web_app/src/: globals.css
