[project]
name = "iopaint"
version = "1.5.3"
requires-python = "~=3.12.0"
dependencies = [
    "accelerate>=1.12.0",
    "controlnet-aux>=0.0.3",
    "diffusers>=0.27.2",
    "easydict>=1.13",
    "fastapi>=0.108.0",
    "gradio>=4.21.0",
    "huggingface-hub>=0.25.2",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.11.0.86",
    "peft>=0.7.1",
    "piexif>=1.1.3",
    "pillow>=9.5.0",
    "pydantic>=2.5.2",
    "python-multipart>=0.0.20",
    "python-socketio==5.7.2",
    "rembg>=2.0.69",
    "rich>=14.2.0",
    "safetensors>=0.7.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.39.1",
    "typer>=0.20.0",
    "typer-config>=1.4.0",
    "uvicorn>=0.38.0",
    "yacs>=0.1.8",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
